
- QtWidgets

  * [QTBUG-8836] QAbstractItemView now allows manual deselect in
    SingleSelection mode (with control modifier)

****************************************************************************
*                          Library                                         *
****************************************************************************

QtCore
------

 - QRect:
   * Added marginsAdded(), marginsRemoved() and operators +, -, +=, -=
     taking a QMargins object allowing for conveniently adding or removing
     margins.
 - QMargins:
   * Added operators for adding and subtracting QMargins objects,
     multiplication and division for int/qreal and unary minus.

 - QMessageAuthenticationCode
    * New class for hash-based message authentication code added to QtCore.

 -

QtGui
-----

 -


QtNetwork
---------

 -



****************************************************************************
*                          Database Drivers                                *
****************************************************************************


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************

Qt for Linux/X11
----------------
 -

Qt for Windows
--------------
 -

Qt for Mac OS X
---------------
 -

Qt for Embedded Linux
---------------------


Qt for Windows CE
-----------------


****************************************************************************
*                      Compiler Specific Changes                           *
****************************************************************************


****************************************************************************
*                          Plugins                                         *
****************************************************************************

