@@ -72,6 +72,8 @@ private slots:
     void operatoreq();
     void captureCount_data();
     void captureCount();
+    void captureNames_data();
+    void captureNames();
     void pcreJitStackUsage_data();
     void pcreJitStackUsage();
     void regularExpressionMatch_data();
